@@ -16,13 +16,20 @@
 
 package org.gradle.internal.operations
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractIntegrationSpec
+import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.util.Matchers
 import spock.lang.Issue
 
 class BuildOperationExecutorIntegrationTest extends AbstractIntegrationSpec {
 
-    def "produces sensible error when there are failures both enqueueing and running operations" () {
+    def "produces sensible error when there are failures both enqueuing and running operations" () {
+        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
+            // For java.util.concurrent.CountDownLatch being serialized reflectively by configuration cache
+            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED')
+        }
+
         buildFile << """
             import org.gradle.internal.operations.BuildOperationExecutor
             import org.gradle.internal.operations.RunnableBuildOperation
@@ -80,13 +87,14 @@ class BuildOperationExecutorIntegrationTest extends AbstractIntegrationSpec {
         settingsFile << ""
         buildFile << """
             import org.gradle.internal.operations.BuildOperationExecutor
-            
+
             task checkOpId() {
+                def buildOperationExecutor = gradle.services.get(BuildOperationExecutor)
                 doLast() {
-                    file(resultFile) << gradle.services.get(BuildOperationExecutor).currentOperation.id
+                    file(resultFile) << buildOperationExecutor.currentOperation.id
                 }
             }
-            
+
             task build1(type: GradleBuild) {
                 tasks = ['checkOpId']
                 startParameter.projectProperties = [resultFile: 'build1result.txt']
@@ -94,6 +102,7 @@ class BuildOperationExecutorIntegrationTest extends AbstractIntegrationSpec {
             task build2(type: GradleBuild) {
                 tasks = ['checkOpId']
                 startParameter.projectProperties = [resultFile: 'build2result.txt']
+                buildName = 'changed'
             }
         """
         succeeds "build1", "build2"
