@@ -16,11 +16,13 @@
 
 package org.gradle.integtests.resolve.api
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.AbstractHttpDependencyResolutionTest
-import org.gradle.integtests.fixtures.FluidDependenciesResolveRunner
-import org.junit.runner.RunWith
+import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
+import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveInterceptor
+import org.gradle.integtests.fixtures.extensions.FluidDependenciesResolveTest
 
-@RunWith(FluidDependenciesResolveRunner)
+@FluidDependenciesResolveTest
 class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolutionTest {
 
     def setup() {
@@ -49,13 +51,14 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
             }
 
             class TaskWithArtifactCollectionInput extends DefaultTask {
+                @Internal
                 ArtifactCollection artifacts
-                
+
                 @InputFiles
                 FileCollection getArtifactFiles() {
                     return artifacts.getArtifactFiles()
                 }
-                
+
                 @OutputFile File outputFile
             }
 """
@@ -70,9 +73,9 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
                 doLast {
                     def artifactFiles = artifacts.artifactFiles
                     def artifactResults = artifacts.artifacts
-                    
+
                     assert artifactResults.size() == 3
-                    
+
                     // Check external artifact
                     def idx = artifacts.findIndexOf { it.file.name == 'external-lib-1.0.jar' }
 
@@ -84,7 +87,7 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
                     assert result.id.componentIdentifier.module == 'external-lib'
                     assert result.id.componentIdentifier.version == '1.0'
                     assert result.id.fileName == 'external-lib-1.0.jar'
-                    
+
                     // Check project artifact
                     idx = artifacts.findIndexOf { it.file.name == 'project-lib.jar' }
 
@@ -93,13 +96,13 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
 
                     assert result.id.componentIdentifier instanceof ProjectComponentIdentifier
                     assert result.id.componentIdentifier.projectPath == ':project-lib'
-                    
+
                     // Check file artifact
                     idx = artifacts.findIndexOf { it.file.name == 'file-lib.jar' }
-                    
+
                     result = artifactResults[idx]
                     assert result.file == artifactFiles[idx]
-                    
+
                     assert result.id instanceof org.gradle.internal.component.local.model.OpaqueComponentArtifactIdentifier
                     assert result.id.componentIdentifier == result.id
                     assert result.id.displayName == 'file-lib.jar'
@@ -121,7 +124,7 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
                 doLast {
                     assert artifacts.artifacts.size() == 3
                 }
-                
+
             }
 """
 
@@ -139,7 +142,7 @@ class ArtifactCollectionIntegrationTest extends AbstractHttpDependencyResolution
                 doLast {
                     assert artifacts.artifacts.size() == 3
                 }
-                
+
             }
 """
         def sourceFile = file("project-lib/src/main/java/Main.java")
@@ -178,7 +181,7 @@ class Main {
             dependencies {
                 compile 'org:does-not-exist:1.0'
             }
-            
+
             task verify(type: TaskWithArtifactCollectionInput) {
                 artifacts = configurations.compile.incoming.artifacts
                 outputFile = file('out')
@@ -187,14 +190,19 @@ class Main {
                     assert artifacts.artifacts.size() == 3
                 }
             }
-"""
+        """
 
         when:
         succeeds "help"
+
+        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
+            // For java.util.concurrent.CopyOnWriteArrayList from DefaultMultiCauseException being serialized reflectively by configuration cache
+            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED')
+        }
         fails "verify"
 
         then:
-        if (FluidDependenciesResolveRunner.isFluid()) {
+        if (FluidDependenciesResolveInterceptor.isFluid()) {
             failure.assertHasDescription("Could not determine the dependencies of task ':verify'.")
             failure.assertHasCause("Could not resolve all task dependencies for configuration ':compile'.")
             failure.assertHasCause("Could not find org:does-not-exist:1.0.")
