@@ -16,12 +16,13 @@
 
 package org.gradle.launcher.daemon.server.scaninfo
 
+import org.gradle.api.JavaVersion
 import org.gradle.integtests.fixtures.daemon.DaemonIntegrationSpec
 import org.gradle.integtests.fixtures.executer.ExecutionResult
 import org.gradle.integtests.fixtures.executer.GradleContextualExecuter
 import org.gradle.integtests.fixtures.timeout.IntegrationTestTimeout
 import org.gradle.launcher.daemon.client.SingleUseDaemonClient
-import org.gradle.util.GFileUtils
+import org.gradle.util.internal.GFileUtils
 import org.gradle.util.Requires
 import org.gradle.util.TestPrecondition
 import spock.lang.IgnoreIf
@@ -52,12 +53,11 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         expect:
-        executer.withArguments('help', '--continuous', '-i').run().getExecutedTasks().contains(':help')
+        executer.withArguments('help', '--continuous', '-i').run().assertTasksExecuted(':help')
     }
 
-    //IBM JDK adds a bunch of environment variables that make the foreground daemon not match
     //Java 9 and above needs --add-opens to make environment variable mutation work
-    @Requires([TestPrecondition.NOT_JDK_IBM, TestPrecondition.JDK8_OR_EARLIER])
+    @Requires(TestPrecondition.JDK8_OR_EARLIER)
     def "should capture basic data when a foreground daemon runs multiple builds"() {
         given:
         buildFile << """
@@ -75,8 +75,8 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         captureResults << executer.withTasks('capture2').run()
 
         then:
-        captureResults[0].getExecutedTasks().contains(':capture1')
-        captureResults[1].getExecutedTasks().contains(':capture2')
+        captureResults[0].assertTaskExecuted(':capture1')
+        captureResults[1].assertTaskExecuted(':capture2')
 
         cleanup:
         daemon?.abort()
@@ -93,7 +93,14 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         when:
-        executer.withArguments(continuous ? ['waitForExpiration', '--continuous'] : ['waitForExpiration']).run()
+        openJpmsModulesForConfigurationCache()
+        if (continuous) {
+            executer.withArgument('waitForExpiration')
+            executer.withArgument('--continuous')
+        } else {
+            executer.withArgument('waitForExpiration')
+        }
+        executer.run()
 
         then:
         file(EXPIRATION_EVENT).text.startsWith "onExpirationEvent fired with: expiring daemon with TestExpirationStrategy uuid:"
@@ -112,7 +119,8 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
 
         when:
-        executer.withArguments('waitForExpiration').run()
+        openJpmsModulesForConfigurationCache()
+        executer.withArgument('waitForExpiration').run()
 
         then:
         file(EXPIRATION_EVENT).text.startsWith "onExpirationEvent fired with: expiring daemon with TestExpirationStrategy uuid:"
@@ -123,7 +131,8 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
            ${imports()}
            ${waitForExpirationTask()}
         """
-        def waitForExpirationResult = executer.withArguments('waitForExpiration').runWithFailure()
+        openJpmsModulesForConfigurationCache()
+        def waitForExpirationResult = executer.withArgument('waitForExpiration').runWithFailure()
 
         then:
         waitForExpirationResult.assertHasCause("Timed out waiting for expiration event")
@@ -143,6 +152,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
 
         when:
         startAForegroundDaemon()
+        openJpmsModulesForConfigurationCache()
         executer.withTasks('waitForExpiration').run()
 
         then:
@@ -164,7 +174,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         result = executer.withArgument('--no-daemon').withTasks('capture').run()
 
         then:
-        executedTasks.contains(':capture')
+        executed(':capture')
         outputContains(SingleUseDaemonClient.MESSAGE)
 
         and:
@@ -175,7 +185,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         """
     task $name {
         doLast {
-            DaemonScanInfo info = project.getServices().get(DaemonScanInfo)
+            DaemonScanInfo info = services.get(DaemonScanInfo)
             ${assertInfo(buildCount, daemonCount, singleUse)}
         }
     }
@@ -184,7 +194,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
 
     static String captureAndAssert() {
         return """
-           DaemonScanInfo info = project.getServices().get(DaemonScanInfo)
+           DaemonScanInfo info = services.get(DaemonScanInfo)
            ${assertInfo(1, 1)}
            """
     }
@@ -213,7 +223,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
 
     static String registerExpirationListener() {
         """
-        def daemonScanInfo = project.getServices().get(DaemonScanInfo)
+        def daemonScanInfo = services.get(DaemonScanInfo)
 
         daemonScanInfo.notifyOnUnhealthy(new Action<String>() {
             @Override
@@ -239,7 +249,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
             public DaemonExpirationResult checkExpiration() {
                 DaemonContext dc = null
                 try {
-                    dc = project.getServices().get(DaemonContext)
+                    dc = services.get(DaemonContext)
                 } catch (Exception e) {
                     // ignore
                 }
@@ -247,7 +257,7 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
             }
         }
 
-        def daemon =  project.getServices().get(Daemon)
+        def daemon =  services.get(Daemon)
         daemon.scheduleExpirationChecks(new AllDaemonExpirationStrategy([new TestExpirationStrategy(project)]), $EXPIRATION_CHECK_FREQUENCY)
         """
     }
@@ -260,9 +270,16 @@ class DaemonScanInfoIntegrationSpec extends DaemonIntegrationSpec {
         import org.gradle.launcher.daemon.server.expiry.*
         import java.util.concurrent.CountDownLatch
         import java.util.concurrent.TimeUnit
-            
+
         def latch = new CountDownLatch(1)
         """
+    }
+
+    private void openJpmsModulesForConfigurationCache() {
+        if (JavaVersion.current().isJava9Compatible() && GradleContextualExecuter.isConfigCache()) {
+            // For java.util.concurrent.CountDownLatch being serialized reflectively by configuration cache
+            executer.withArgument('-Dorg.gradle.jvmargs=--add-opens java.base/java.util.concurrent=ALL-UNNAMED --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED')
+        }
     }
 
 }
